[package]
name = "ore-relayer-cli"
version = "0.4.12-alpha"
description = "A command line interface for the ORE relayer program."
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "ore-relayer"
path = "src/main.rs"

[features]
default = []

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
cached = "0.46.1"
chrono = "0.4.34"
clap = { version = "4.4.12", features = ["derive"] }
futures = "0.3.30"
log = "0.4"
ore-api = "2.1.0"
ore-utils = "2.1.0"
ore-relayer-api = "2.0.0"
rand = "0.8.4"
solana-cli-config = "^1.18"
solana-client = "^1.18"
solana-program = "^1.18"
solana-rpc-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.3", features = [
  "no-entrypoint",
] }
tokio = "1.35.1"
